# brev-dagster-pipelines

./: .CLAUDE.md  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
scripts/: dev-start.sh  dev-status.sh  dev-stop.sh
src/brev_pipelines/: __init__.py  config.py  definitions.py  jobs.py  types.py
src/brev_pipelines/assets/: __init__.py  cbs_factory.py  central_bank_speeches.py  demo.py  health.py  synthetic_speeches.py  validation.py
src/brev_pipelines/io_managers/: __init__.py  checkpoint.py  lakefs_polars.py  minio_polars.py  weaviate_io.py
src/brev_pipelines/resources/: __init__.py  k8s_scaler.py  lakefs.py  llm_progress.py  llm_retry.py  minio.py  nim.py  nim_embedding.py  safe_synth.py  safe_synth_retry.py  weaviate.py
src/brev_pipelines/utils/: __init__.py  harmony.py
tests/: __init__.py  conftest.py  test_assets.py  test_central_bank_speeches.py  test_resources.py  test_validation.py
tests/unit/: test_gpt_oss_types.py  test_harmony_parser.py  test_types.py
tests/unit/assets/: test_cbs_assets.py  test_demo.py  test_observability.py  test_speech_classification_integration.py  test_synthesis_input_validation.py  test_synthetic_assets.py  test_synthetic_retry_integration.py  test_validation_assets.py  test_validation_weaviate.py
tests/unit/io_managers/: test_checkpoint.py  test_lakefs_polars.py  test_minio_polars.py  test_weaviate_io.py
tests/unit/resources/: test_lakefs.py  test_lakefs_exceptions.py  test_llm_retry.py  test_nim_exceptions.py  test_nim_gpt_oss.py  test_safe_synth.py  test_safe_synth_retry.py  test_weaviate.py  test_weaviate_exceptions.py
