[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brev-pipelines"
version = "0.1.0"
description = "Dagster pipelines for Brev Data Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.6.0,<2.0.0",
    "pandas>=2.0.0",
    "minio>=7.2.0",
    "lakefs-sdk>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "dagster-webserver>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true